# lilyponddist

./: .cirrus.yml  .gitignore  README.rst  pyproject.toml  pyrightconfig.json  setup.py  setup.py~
.github/workflows/: test.yml
lilyponddist/: __init__.py
lilyponddist/data/linux-x86_64/etc/fonts/: fonts.conf
lilyponddist/data/linux-x86_64/lib/python3.10/: _osx_support.py  _sysconfigdata__linux_x86_64-linux-gnu.py  sysconfig.py
lilyponddist/data/linux-x86_64/libexec/: abc2ly  convert-ly  etf2ly  lilymidi  lilypond-book  lilypond-invoke-editor  lilysong  midi2ly  musicxml2ly
lilyponddist/data/linux-x86_64/share/guile/2.2/: guile-procedures.txt
lilyponddist/data/linux-x86_64/share/lilypond/2.24.1/fontconfig/: 04aabc0a78ac019cf9454389977116d2-le64.cache-8  0bd3dc0958fa2205aaaa8ebb13e2872b-le64.cache-8  0c9eb80ebd1c36541ebe2852d3bb0c49-le64.cache-8  0d8c3b2ac0904cb8a57a757ad11a4a08-le64.cache-8  0dadf5e5bd908869c8b99cfac22b8103-le64.cache-8  0fafd173547752dce4dee1a69e0b3c95-le64.cache-8  101cccc1fb4a522639248932a3f2b9ca-le64.cache-8  105b9c7e6f0a4f82d8c9b6e39c52c6f9-le64.cache-8  12c5eb5b0d6d6fd1848053bcdafabe09-le64.cache-8  140de4c79e1fe3233d29845b6303d1b0-le64.cache-8  14a5e22175779b556eaa434240950366-le64.cache-8  14d493b97896515cad3840ba4896e372-le64.cache-8  16c2fda60d1b4b719f4b3d06fd951d25-le64.cache-8  188ac73a183f12857f63bb60a4a6d603-le64.cache-8  198d8fcf01c96d0cf813f74fd759bdb7-le64.cache-8  1ac9eb803944fde146138c791f5cc56a-le64.cache-8  1c2c2997deddd45e0296fa5a60917b7d-le64.cache-8  (+160 more)
test/: test1.ly  test1.py
(+87 files in other folders)
