
[build-system]

requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lilyponddist"
version = "1.1.0"
description = "lilypond distribution as a python package"
authors = [
  { name = "Eduardo Moguillansky", email = "eduardo.moguillansky@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.rst"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
	"appdirs",
	"progressbar"
]

[tool.setuptools]
packages = ["lilyponddist"]


[tool.setuptools.package-data]
sndfileio = ['py.typed']

[project.urls]
"Homepage" = "https://github.com/gesellkammer/lilyponddist"
